[package]
name = "parallel-astar-rust"
version = "0.1.0"
authors = ["Brett Fazio, Ellie Kozlowski, Dylan Ochoa, Blake Robertson, Idel Martinez"]
edition = "2018"

[dependencies]
crossbeam = "0.8"
rand = "0.8.1"
clap = "2.27.0"
criterion = "0.3"

[[bench]]
name = "benchmark"
path = "src/benches/benchmark.rs"
harness = false